# anime-sama_api

./: README.md  TODO.md  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yaml
anime_sama/: catalogue.py  config.py  custom_client.py  defautl_config.py  downloader.py  episode.py  internal_player.py  langs.py  main.py  play_menu.py  season.py  utils.py
anime_sama_api/: __init__.py  catalogue.py  episode.py  langs.py  season.py  top_level.py  utils.py
anime_sama_api/cli/: __init__.py  __main__.py  config.py  config.toml  defautl_config.py  downloader.py  episode_extra_info.py  error_handeling.py  internal_player.py  utils.py
cli/: __init__.py  config.py  defautl_config.py  downloader.py  internal_player.py  play_menu.py  utils.py
exemples/: new_episodes_rss.py
tests/data/: episode_data.py
~/.config/anime-sama_cli/: config.toml
