[tool.poetry]
name = "anime-sama"
version = "0.1.0"
description = "Download video from anime-sama.fr"
authors = ["NiniKo <you@example.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "anime_sama"}]

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.11.4"
httpx = "^0.27.2"
hishel = "^0.1.1"
tqdm = "^4.67.0"
yaspin = "^3.1.0"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
types-tqdm = "^4.66.0"
yt-dlp-types = "^0.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
