[tool.poetry]
name = "anime-sama"
version = "0.1.0"
description = "Download video from anime-sama.fr"
authors = ["NiniKo <pcninik@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "anime_sama_api"}]

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.11.18"
httpx = "^0.28.0"
hishel = "^0.1.1"
rich = {extras = ["progress", "status"], version = "^13.9.4"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
yt-dlp-types = "^0.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
